--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     
+    <body class=".bg-dark">
+
 <h1>Awesome Inc Bootcamp 2021 Blog</h1>
 
   <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Milky_Way_Arch.jpg?" alt="galaxy">
