--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Awesome Inc Bootcamp 2021 Blog</title>
+    <title>Awesome Inc Bootcamp 2021</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+    <link href="./css/styles.css" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/style.css">
+
 </head>
+
 <body>
+
+  <div class="card" style="width: 18rem;">
+    <img src="images/Milky_Way_Arch.jpg" class="card-img-top" alt="Milky way">
+    <div class="card-body">
+      <h5 class="card-title">Awesome Inc Bootcamp 2021 Blog</h5>
+      <p class="card-text">This is my blog telling about my experience going through the Awesome Inc. bootcamp.</p>
+    </div>
+    <ul class="list-group list-group-flush">
+      <li class="list-group-item">An item</li>
+      <li class="list-group-item">A second item</li>
+      <li class="list-group-item">A third item</li>
+    </ul>
+    <div class="card-body">
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
+
+
+
+
+
+
+
     
     <body class=".bg-dark">
 
-<h1>Awesome Inc Bootcamp 2021 Blog</h1>
 
   <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Milky_Way_Arch.jpg?" alt="galaxy">
 
