--- a/index.html
+++ b/index.html
@@ -1,25 +1,23 @@
-
 <html lang="en-US">
- 
-  <head>
-   
-      <meta charset="UTF-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   
-      <title>Aweseome Inc Bootcamp 2021</title>
-      <link rel="stylesheet" href="css/style.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<head>
+
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Aweseome Inc Bootcamp 2021</title>
+  <link rel="stylesheet" href="css/style.css">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
-        crossorigin="anonymous"></script>
-    <link href="./css/styles.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    crossorigin="anonymous"></script>
 
-    <link rel="stylesheet" href="css/style.css">
+  <link href="./css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -28,42 +26,39 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-12">
-        <img alt="Bootstrap Image Preview" src="images/Milky_Way_Arch.jpg" />
         <div class="page-header">
-          <h1>
-            Awesome Inc Bootcamp 2021 Blog
-          </h1>
+          
+            <img src="images/casualadventurebackground__76428.webp" class="card-img-top" alt="adventure">
         </div>
-        <div id="card-902964">
+        <div class="row">
+          <div class="col-md-12">
+          </div>
+        </div>
+        <div id="card-900145">
           <div class="card">
             <div class="card-header">
-               <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-902964" href="#card-element-816905">Week One</a>
+              <h1> Awesome Inc Bootcamp 2021</h1>
+              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+                href="#card-element-463332">Week One</a>
             </div>
-            <div id="card-element-816905" class="collapse">
+            <div id="card-element-463332" class="collapse">
               <div class="card-body">
-                ...
+                Anim pariatur cliche...
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-header">
-               <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-902964" href="#card-element-14766">Week Two</a>
+              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+                href="#card-element-999534">Week Two</a>
             </div>
-            <div id="card-element-14766" class="collapse">
+            <div id="card-element-999534" class="collapse">
               <div class="card-body">
-                ...
+                Anim pariatur cliche...
               </div>
             </div>
           </div>
         </div>
       </div>
-
-      <script src="js/main.js"></script>
     </div>
   </div>
-
-
-
-
-
-  
