--- a/index.html
+++ b/index.html
@@ -58,6 +58,73 @@
               </div>
             </div>
           </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+                href="#card-element-999534">Week Three</a>
+            </div>
+            <div id="card-element-999534" class="collapse">
+              <div class="card-body">
+                Anim pariatur cliche...
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+                href="#card-element-999534">Week Four</a>
+            </div>
+            <div id="card-element-999534" class="collapse">
+              <div class="card-body">
+                Anim pariatur cliche...
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+                href="#card-element-999534">Week Five</a>
+            </div>
+            <div id="card-element-999534" class="collapse">
+              <div class="card-body">
+                Anim pariatur cliche...
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+                href="#card-element-999534">Week Six</a>
+            </div>
+            <div id="card-element-999534" class="collapse">
+              <div class="card-body">
+                Anim pariatur cliche...
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+                href="#card-element-999534">Week Seven</a>
+            </div>
+            <div id="card-element-999534" class="collapse">
+              <div class="card-body">
+                Anim pariatur cliche...
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+                href="#card-element-999534">Week Eight</a>
+            </div>
+            <div id="card-element-999534" class="collapse">
+              <div class="card-body">
+                Anim pariatur cliche...
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
