--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <div class="row">
       <div class="col-md-12">
         <div class="page-header">
-          
-            <img src="images/casualadventurebackground__76428.webp" class="card-img-top" alt="adventure">
+
+          <img src="images/casualadventurebackground__76428.webp" class="card-img-top" alt="adventure">
         </div>
         <div class="row">
           <div class="col-md-12">
@@ -43,7 +43,20 @@
             </div>
             <div id="card-element-463332" class="collapse">
               <div class="card-body">
-                Anim pariatur cliche...
+                <h3>Objective</h3>
+                <li>Start learning Git</li><br>
+                <li>Start a Github account</li><br>
+                <ul>(https://lab.github.com/githubtraining/first-week-on-github)</ul><br>
+                <li>Started a blog about the "Awesome Inc Bootcamp</li><br>
+
+                <h2>Thoughts on Week One</h2>
+
+                <p>Week one has been excitingly tough! The famous motto "Fail ofter, Fail fast and Fail forward" is a
+                  guarantee. Although failing happens often, I'm proud to say that I'm learing alot. At the end of the
+                  first week, I'm starting to produce my first blog. Over the next 15 weeks I don't know what to expect,
+                  but the expectations to learn are high. In the end of this 16 weeks of bootcamp my goal is to be
+                  prepared to enter a new career industry as a desired "Web Developer" fully qualified.</p>
+
               </div>
             </div>
           </div>
