--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
           </div>
         </div>
         <div id="card-900145">
-          <div class="card">
+          <div class="card bg-secondary text-white">
             <div class="card-header">
               <h1> Awesome Inc Bootcamp 2021</h1>
-              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+              <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
                 href="#card-element-463332">Week One</a>
             </div>
             <div id="card-element-463332" class="collapse">
@@ -60,8 +60,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
-              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+            <div class="card-header bg-secondary">
+              <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
                 href="#card-element-999534">Week Two</a>
             </div>
             <div id="card-element-999534" class="collapse">
@@ -71,8 +71,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
-              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+            <div class="card-header bg-secondary">
+              <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
                 href="#card-element-999534">Week Three</a>
             </div>
             <div id="card-element-999534" class="collapse">
@@ -82,8 +82,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
-              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+            <div class="card-header bg-secondary">
+              <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
                 href="#card-element-999534">Week Four</a>
             </div>
             <div id="card-element-999534" class="collapse">
@@ -93,8 +93,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
-              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+            <div class="card-header bg-secondary">
+              <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
                 href="#card-element-999534">Week Five</a>
             </div>
             <div id="card-element-999534" class="collapse">
@@ -104,8 +104,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
-              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+            <div class="card-header bg-secondary">
+              <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
                 href="#card-element-999534">Week Six</a>
             </div>
             <div id="card-element-999534" class="collapse">
@@ -115,8 +115,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
-              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+            <div class="card-header bg-secondary">
+              <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
                 href="#card-element-999534">Week Seven</a>
             </div>
             <div id="card-element-999534" class="collapse">
@@ -126,8 +126,8 @@
             </div>
           </div>
           <div class="card">
-            <div class="card-header">
-              <a class="card-link collapsed" data-toggle="collapse" data-parent="#card-900145"
+            <div class="card-header bg-secondary">
+              <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
                 href="#card-element-999534">Week Eight</a>
             </div>
             <div id="card-element-999534" class="collapse">
