--- a/index.html
+++ b/index.html
@@ -34,12 +34,18 @@
           </div>
         </div>
         <div id="card-900145">
-          <div class="card bg-secondary text-white">
+          <div class="card bg-primary text-white">
             <div class="card-header">
               <h1> Awesome Inc Bootcamp 2021</h1>
               <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
-                href="#card-element-463332">Week One</a>
+                href="#card-element-463332"></a>
             </div>
+            
+            <div class="card">
+              <div class="card-header bg-secondary">
+                <a class="card-link collapsed text-white" data-toggle="collapse" data-parent="#card-900145"
+                  href="#card-element-999534">Week One</a>
+              </div>
             <div id="card-element-463332" class="collapse">
               <div class="card-body">
                 <h3>Objective</h3>
